layout: fixed dropdown alignment

--- a/styles/pymakr.less
+++ b/styles/pymakr.less
@@ -557,14 +557,14 @@
     div.subnav {
       display: none;
       position: absolute;
-      bottom: 26px;
+      bottom: 27px;
       line-height: 25px;
       color: @text-color;
       background: @app-background-color !important;
       padding: 11px 1px;
       z-index: 10000;
       &.left {
-        left: 0px;
+        left: -2px;
         div {
           width: 237px;
           text-align: left;
